Fix header when user name is too big

--- a/app/assets/stylesheets/modules/topbar.sass
+++ b/app/assets/stylesheets/modules/topbar.sass
@@ -25,7 +25,7 @@
       line-height: $topbar-height + +rem-calc(0.5)
 
     ul.left
-      margin-left: +rem-calc(110px)
+      margin-left: +rem-calc(25px)
 
       a
         font-size: +rem-calc(14)
